[package]
name = "rost"
version = "0.1.0"
authors = ["Markus Åkesson <macke.95_06@hotmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
riscv-rt = { git = "https://github.com/rust-embedded/riscv-rt.git" }
riscv = { git = "https://github.com/rust-embedded/riscv.git" }
volatile = "0.2.6"
spin = "0.5.2"
num_enum_derive = "0.5.1"
log = "0.4.11"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.release]
lto = true
codegen-units = 1
